<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:binding="http://schemas.android.com/apk/res-auto" android:id="@+id/detail" android:tag="layout/fragment_detail_0" android:layout_width="wrap_content" android:layout_height="wrap_content">
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
        <LinearLayout android:orientation="horizontal" android:padding="10dp" android:layout_width="match_parent" android:layout_height="wrap_content">
            <LinearLayout android:orientation="vertical" android:layout_width="300dp" android:layout_height="450px" android:layout_weight="1">
                <ImageView android:id="@+id/cover" android:tag="binding_1" android:layout_width="match_parent" android:layout_height="match_parent" android:src="@mipmap/ic_launcher" android:scaleType="fitXY"/>
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:paddingLeft="10dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_weight="1">
                <TextView android:textSize="24dp" android:textStyle="bold" android:id="@+id/title" android:tag="binding_2" android:paddingBottom="6dp" android:layout_width="match_parent" android:layout_height="wrap_content"/>
                <LinearLayout android:orientation="horizontal" android:paddingTop="4dp" android:paddingBottom="4dp" android:layout_width="match_parent" android:layout_height="wrap_content">
                    <TextView android:textSize="14sp" android:textStyle="bold" android:id="@+id/categories_key" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/categories" android:layout_weight="1"/>
                    <TextView android:textSize="14sp" android:layout_gravity="start" android:id="@+id/categories_value" android:tag="binding_3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1"/>
                </LinearLayout>
                <LinearLayout android:orientation="horizontal" android:paddingTop="4dp" android:paddingBottom="4dp" android:layout_width="match_parent" android:layout_height="wrap_content">
                    <TextView android:textSize="14sp" android:textStyle="bold" android:id="@+id/score_key" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/score" android:layout_weight="1"/>
                    <TextView android:textSize="14sp" android:layout_gravity="start" android:id="@+id/score_value" android:tag="binding_4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1"/>
                </LinearLayout>
                <LinearLayout android:orientation="horizontal" android:paddingTop="4dp" android:paddingBottom="4dp" android:layout_width="match_parent" android:layout_height="wrap_content">
                    <TextView android:textSize="14dp" android:textStyle="bold" android:id="@+id/minute_key" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/minute" android:layout_weight="1"/>
                    <TextView android:textSize="14sp" android:layout_gravity="start" android:id="@+id/minute_value" android:tag="binding_5" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1"/>
                </LinearLayout>
                <LinearLayout android:orientation="horizontal" android:paddingTop="4dp" android:paddingBottom="4dp" android:layout_width="match_parent" android:layout_height="wrap_content">
                    <TextView android:textSize="14sp" android:textStyle="bold" android:id="@+id/published_at_key" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/published_at" android:layout_weight="1"/>
                    <TextView android:textSize="14sp" android:layout_gravity="start" android:id="@+id/published_at_value" android:tag="binding_6" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:padding="10dp" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:textSize="16sp" android:textStyle="bold" android:id="@+id/drama_key" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/drama"/>
            <TextView android:id="@+id/drama_value" android:tag="binding_7" android:paddingTop="10dp" android:layout_width="match_parent" android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
